# TNCG15-Raytracer

./: CMakeLists.txt  README.md
include/: brdf.h  camera.h  colordbl.h  cube.h  direction.h  entity.h  lambertianbrdf.h  lightsource.h  material.h  pixel.h  ray.h  rayhit.h  room.h  scene.h  sphere.h  tetrahedron.h  threadpool.h  triangle.h  utilities.h  vertex.h
report/: main.fdb_latexmk  main.fls  main.tex
src/: camera.cpp  colordbl.cpp  cube.cpp  direction.cpp  lambertianbrdf.cpp  lightsource.cpp  main.cpp  material.cpp  pixel.cpp  ray.cpp  rayhit.cpp  room.cpp  scene.cpp  sphere.cpp  tetrahedron.cpp  threadpool.cpp  triangle.cpp  utilities.cpp  vertex.cpp
